--- a/kancmatket_html/news_main.html
+++ b/kancmatket_html/news_main.html
@@ -85,7 +85,7 @@
         </div>
         <div class=" clearfix phones_recall">
             <div class="number">
-                <i class="fa fa-phone" aria-hidden="true"></i>(061) 764-72-70
+                <i class="fa fa-phone" aria-hidden="true"></i>+38 (097) 504 33 99
             </div>
             <div class="callback">
               <a href="" class="callback_btn">Заказать звонок</a>
@@ -281,7 +281,7 @@
             <h4 class="news_item_header">Заголовок</h4>
             <div class="news_item_text">
               veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</div>
-            <div class="learn_more"><a href="">узнать больше</a></div>
+            <div class="learn_more"><a href="news_in.html">узнать больше</a></div>
             <div class="news_item_time">15.07.16</div>
           </div>
         </div>
