--- a/kancmatket_html/catalogue.html
+++ b/kancmatket_html/catalogue.html
@@ -87,7 +87,7 @@
         </div>
         <div class=" clearfix phones_recall">
             <div class="number">
-                <i class="fa fa-phone" aria-hidden="true"></i>(061) 764-72-70
+                <i class="fa fa-phone" aria-hidden="true"></i>+38 (097) 504 33 99
             </div>
             <div class="callback">
               <a href="" class="callback_btn">Заказать звонок</a>
