--- a/kancmatket_html/index.html
+++ b/kancmatket_html/index.html
@@ -178,7 +178,7 @@
 <div class="sub_nav clearfix">
   <div class="wrapper">
     <ul class="sub_nav_container">
-      <li class="col-md-4 col-xs-12 dropdown_btn">Товары для школы
+      <li class="col-md-4 col-xs-12 dropdown_btn" id="sub_nav">Товары для школы
           <ul class="dropdown-menu">
            <li class="third_level dropdown_btn_third">Альбомы и тетради
                 <ul class="dropdown-menu_third">
@@ -796,9 +796,10 @@
         <li class="map_contacts_item"><i class="fa fa-envelope" aria-hidden="true"></i>info@kancmarket.kiev.ua</li>
       </ul>
       </div>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2679.3546219246104!2d35.187612!3d47.813345!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x66a9d85c1a88419a!2z0JrQsNC90YYt0JzQsNGA0LrQtdGCINCa0LDQvdGG0LXQu9GP0YDQuNGP!5e0!3m2!1sru!2s!4v1404753315740" width="100%" height="370" frameborder="0"  frameborder="0" style="border:0"></iframe></div>
+     <iframe style="border: 0;" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1509.4589216952863!2d30.498060009568814!3d50.48584219259807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1453052609943" width="100%" height="3700" frameborder="0" allowfullscreen="allowfullscreen"></iframe></div>
   </div>
 </footer>
+
 <div class="pop_up add_to_bucket">
   <div id="modal_form">
       <span id="modal_close"><i class="fa fa-times" aria-hidden="true"></i></span> 
