--- a/kancmatket_html/order_authorization.html
+++ b/kancmatket_html/order_authorization.html
@@ -85,7 +85,7 @@
         </div>
         <div class=" clearfix phones_recall">
             <div class="number">
-                <i class="fa fa-phone" aria-hidden="true"></i>(061) 764-72-70
+                <i class="fa fa-phone" aria-hidden="true"></i>+38 (097) 504 33 99
             </div>
             <div class="callback">
               <a href="" class="callback_btn">Заказать звонок</a>
@@ -266,7 +266,8 @@
       <input type="text" placeholder="Введите Ваш логин"></br>
       <input type="text" placeholder="Введите Ваш пароль">
     </form>
-    <span class="no_authorize">Забыли пароль?</span>
+    <span class="no_authorize">Забыли пароль?</span></br>
+    <span class="no_authorize">Продолжить без регистрации</span>
     <a class="product_buy_btn product_buy_btn_card" href="order_authorization.html" style="float: right; padding: 10px;">
             <span>Войти</span>
         </a>
@@ -329,6 +330,10 @@
     </form>
   </div>
   <div id="payment2" class="fade">
+  <form>
+      <input type="text" placeholder="Введите Ваше имя"></br>
+      <input type="text" placeholder="Введите Ваш телефон"></br>
+    </form>
   
   </div>
 </div>
@@ -440,7 +445,7 @@
         <li class="map_contacts_item"><i class="fa fa-envelope" aria-hidden="true"></i>info@kancmarket.kiev.ua</li>
       </ul>
       </div>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2679.3546219246104!2d35.187612!3d47.813345!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x66a9d85c1a88419a!2z0JrQsNC90YYt0JzQsNGA0LrQtdGCINCa0LDQvdGG0LXQu9GP0YDQuNGP!5e0!3m2!1sru!2s!4v1404753315740" width="100%" height="370" frameborder="0"  frameborder="0" style="border:0"></iframe></div>
+     <iframe style="border: 0;" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1509.4589216952863!2d30.498060009568814!3d50.48584219259807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1453052609943" width="100%" height="3700" frameborder="0" allowfullscreen="allowfullscreen"></iframe></div>
   </div>
 </footer>
 
