--- a/kancmatket_html/index.html
+++ b/kancmatket_html/index.html
@@ -796,7 +796,7 @@
         <li class="map_contacts_item"><i class="fa fa-envelope" aria-hidden="true"></i>info@kancmarket.kiev.ua</li>
       </ul>
       </div>
-     <iframe style="border: 0;" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1509.4589216952863!2d30.498060009568814!3d50.48584219259807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1453052609943" width="100%" height="3700" frameborder="0" allowfullscreen="allowfullscreen"></iframe></div>
+     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:370px;width:100%;"><div id="gmap_canvas1" style="height:370px;width:100%;"><style>#gmap_canvas1 img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.map-embed.com" id="get-map-data">map-embed.com</a></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:14,center:new google.maps.LatLng(50.486078,30.49785099999997),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas1"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(50.486078, 30.49785099999997)});infowindow = new google.maps.InfoWindow({content:"<b>&#1050;&#1072;&#1085;&#1094;&#1084;&#1072;&#1088;&#1082;&#1077;&#1090;</b><br/>&#1087;&#1077;&#1090;&#1088;&#1086;&#1074;&#1082;&#1072;<br/> &#1082;&#1080;&#1077;&#1074;" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script></div>
   </div>
 </footer>
 
