--- a/kancmatket_html/index.html
+++ b/kancmatket_html/index.html
@@ -19,6 +19,10 @@
 <nav class="navbar navbar-fixed-top">
   <div class="container clearfix top_nav">
    <a class="navbar-brand page-scroll" href="index.html"><img src="img/logo_new.png"  id="logo" alt="logo top"></a> 
+  <!--  <div style="">
+   <div>+38 (097) 504 33 99</div>
+    <div>+38 (097) 504 33 99</div>
+    </div> -->
     
         <div class="login">
               <a href="" class="callback_btn2"><i class="fa fa-user" aria-hidden="true"></i>Вход в личный кабинет</a>
@@ -176,13 +180,14 @@
     </div>
 </div>
 <div class="sub_nav clearfix">
-  <div class="wrapper">
+  <div class="container">
     <ul class="sub_nav_container">
-      <li class="col-md-4 col-xs-12 dropdown_btn" id="sub_nav">Товары для школы
+      <li class="col-md-3 col-xs-12 dropdown_btn">Товары для школы
           <ul class="dropdown-menu">
            <li class="third_level dropdown_btn_third">Альбомы и тетради
                 <ul class="dropdown-menu_third">
-                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Альбомы и тетради</a>
+                  </li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
                   <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
@@ -191,7 +196,8 @@
             <li class="third_level dropdown_btn_third">Рюкзаки и пеналы
                 <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
-                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a>
+                  </li>
                   <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
                 </ul>
@@ -214,7 +220,46 @@
              </li>
           </ul>
       </li>
-      <li class="col-md-4 col-xs-12 dropdown_btn" >Товары для офиса
+
+      <li class="col-md-3 col-xs-12 dropdown_btn">Товары для школы
+          <ul class="dropdown-menu">
+           <li class="third_level dropdown_btn_third">Альбомы и тетради
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a>
+                  </li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third">Рюкзаки и пеналы
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a>
+                  </li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third">Папки, файлы и архивы
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+             </li>
+          </ul>
+      </li>
+      <li class="col-md-3 col-xs-12 dropdown_btn" >Товары для офиса
       <ul class="dropdown-menu">
            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Альбомы и тетради</a>
                 <ul class="dropdown-menu_third">
@@ -249,7 +294,7 @@
                 </ul></li>
              </li>
           </ul></li>
-      <li class="col-md-4 col-xs-12 dropdown_btn creator">Товары для творчества
+      <li class="col-md-3 col-xs-12 dropdown_btn creator">Товары для творчества
        <ul class="dropdown-menu">
            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Альбомы и тетради</a>
                 <ul class="dropdown-menu_third">
