--- a/kancmatket_html/index.html
+++ b/kancmatket_html/index.html
@@ -88,7 +88,9 @@
         </div>
         <div class=" clearfix phones_recall">
             <div class="number">
-                <i class="fa fa-phone" aria-hidden="true"></i>+38 (097) 504 33 99
+                <i class="fa fa-phone" aria-hidden="true"></i>
+                <div style="overflow: hidden;">+38 (097) 504 33 99<br>+38 (097) 504 33 99</div>
+
             </div>
             <div class="callback">
               <a href="" class="callback_btn">Заказать звонок</a>
@@ -182,7 +184,7 @@
 <div class="sub_nav clearfix">
   <div class="container">
     <ul class="sub_nav_container">
-      <li class="col-md-3 col-xs-12 dropdown_btn">Товары для школы
+      <li class="col-md-2 col-xs-12 dropdown_btn">Художественные материалы
           <ul class="dropdown-menu">
            <li class="third_level dropdown_btn_third">Альбомы и тетради
                 <ul class="dropdown-menu_third">
@@ -220,8 +222,7 @@
              </li>
           </ul>
       </li>
-
-      <li class="col-md-3 col-xs-12 dropdown_btn">Товары для школы
+       <li class="col-md-2 col-xs-12 dropdown_btn">Художественные материалы
           <ul class="dropdown-menu">
            <li class="third_level dropdown_btn_third">Альбомы и тетради
                 <ul class="dropdown-menu_third">
@@ -259,7 +260,45 @@
              </li>
           </ul>
       </li>
-      <li class="col-md-3 col-xs-12 dropdown_btn" >Товары для офиса
+      <li class="col-md-2 col-xs-12 dropdown_btn">Товары<br> для школы
+          <ul class="dropdown-menu">
+           <li class="third_level dropdown_btn_third">Альбомы и тетради
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a>
+                  </li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third">Рюкзаки и пеналы
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a>
+                  </li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third">Папки, файлы и архивы
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+             </li>
+          </ul>
+      </li>
+       <li class="col-md-2 col-xs-12 dropdown_btn" >Товары<br> для офиса
       <ul class="dropdown-menu">
            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Альбомы и тетради</a>
                 <ul class="dropdown-menu_third">
@@ -294,7 +333,42 @@
                 </ul></li>
              </li>
           </ul></li>
-      <li class="col-md-3 col-xs-12 dropdown_btn creator">Товары для творчества
+      <li class="col-md-2 col-xs-12 dropdown_btn creator" >Товары<br> для офиса
+      <ul class="dropdown-menu">
+           <li class="third_level dropdown_btn_third"><a href="catalogue.html">Альбомы и тетради</a>
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Рюкзаки и пеналы</a>
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            </li>
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Канцелярские принадлежности</a>
+             <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul></li>
+             <li class="third_level dropdown_btn_third"><a href="catalogue.html">Папки, файлы и архивы</a>
+             <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul></li>
+             </li>
+          </ul></li>
+      <li class="col-md-2 col-xs-12 dropdown_btn creator">Товары для творчества
        <ul class="dropdown-menu">
            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Альбомы и тетради</a>
                 <ul class="dropdown-menu_third">
