--- a/kancmatket_html/contact_history.html
+++ b/kancmatket_html/contact_history.html
@@ -26,9 +26,9 @@
               <a href="" class="callback_btn2"><i class="fa fa-user" aria-hidden="true"></i>Вход в личный кабинет</a>
               <div id="modal_form_recall2" class="login_item animated"> 
                   <ul class="login_popup_tabs clearfix">
-  <li class="active"><a data-toggle="tab" href="#home">Войти</a></li>
-  <li class="noactive"><a data-toggle="tab" href="#menu1">Регистрация</a></li>
-</ul>
+                      <li class="active"><a data-toggle="tab" href="#home">Войти</a></li>
+                      <li class="noactive"><a data-toggle="tab" href="#menu1">Регистрация</a></li>
+                  </ul>
 
 <div class="tab-content">
   <div id="home" class="tab-pane fade in active authorization">
@@ -134,11 +134,29 @@
     </div>
 </nav>
 <div class="sub_nav clearfix">
-  <div class="wrapper">
+  <div class="container">
     <ul class="sub_nav_container">
-      <li class="col-md-4 col-xs-12 dropdown_btn">Товары для школы
+      <li class="col-md-2 col-xs-12 dropdown_btn">Художественные материалы
           <ul class="dropdown-menu">
-           <li class="third_level dropdown_btn_third"><a href="catalogue.html">Альбомы и тетради</a>
+           <li class="third_level dropdown_btn_third">Альбомы и тетради
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a>
+                  </li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third">Рюкзаки и пеналы
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a>
+                  </li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
                 <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
@@ -146,23 +164,7 @@
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
                 </ul>
           </li>
-            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Рюкзаки и пеналы</a>
-                <ul class="dropdown-menu_third">
-                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
-                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
-                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
-                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
-                </ul>
-          </li>
-            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Канцелярские принадлежности</a>
-                <ul class="dropdown-menu_third">
-                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
-                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
-                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
-                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
-                </ul>
-          </li>
-            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Папки, файлы и архивы</a>
+            <li class="third_level dropdown_btn_third">Папки, файлы и архивы
                 <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
@@ -172,7 +174,83 @@
              </li>
           </ul>
       </li>
-      <li class="col-md-4 col-xs-12 dropdown_btn" >Товары для офиса
+       <li class="col-md-2 col-xs-12 dropdown_btn">Художественные материалы
+          <ul class="dropdown-menu">
+           <li class="third_level dropdown_btn_third">Альбомы и тетради
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a>
+                  </li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third">Рюкзаки и пеналы
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a>
+                  </li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third">Папки, файлы и архивы
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+             </li>
+          </ul>
+      </li>
+      <li class="col-md-2 col-xs-12 dropdown_btn">Товары<br> для школы
+          <ul class="dropdown-menu">
+           <li class="third_level dropdown_btn_third">Альбомы и тетради
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a>
+                  </li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third">Рюкзаки и пеналы
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a>
+                  </li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third">Папки, файлы и архивы
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+             </li>
+          </ul>
+      </li>
+       <li class="col-md-2 col-xs-12 dropdown_btn" >Товары<br> для офиса
       <ul class="dropdown-menu">
            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Альбомы и тетради</a>
                 <ul class="dropdown-menu_third">
@@ -207,7 +285,42 @@
                 </ul></li>
              </li>
           </ul></li>
-      <li class="col-md-4 col-xs-12 dropdown_btn creator">Товары для творчества
+      <li class="col-md-2 col-xs-12 dropdown_btn creator" >Товары<br> для офиса
+      <ul class="dropdown-menu">
+           <li class="third_level dropdown_btn_third"><a href="catalogue.html">Альбомы и тетради</a>
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Рюкзаки и пеналы</a>
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            </li>
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Канцелярские принадлежности</a>
+             <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul></li>
+             <li class="third_level dropdown_btn_third"><a href="catalogue.html">Папки, файлы и архивы</a>
+             <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul></li>
+             </li>
+          </ul></li>
+      <li class="col-md-2 col-xs-12 dropdown_btn creator">Товары для творчества
        <ul class="dropdown-menu">
            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Альбомы и тетради</a>
                 <ul class="dropdown-menu_third">
