one2dream - адаптив

--- a/one2dream/index.html
+++ b/one2dream/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>Роды в США</title>
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="css/animate.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
@@ -15,14 +15,25 @@
   <div class="scroll">
     <div class="scroll-mid">
       <div class="contactTop">
+        <a href="index.html"><img src="img/logo.png" alt="one2dream"/></a>
+
+        <div class="nav">
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </div>
+        <div class="coll"><i class="fa fa-phone" aria-hidden="true"></i></div>
+        <div class="number">
+          <span><i class="fa fa-phone" aria-hidden="true"></i> 8 800 1234 567</span>
+          <a class="call">заказать звонок</a>
+          <span>Eng</span>
+        </div>
         <ul class="mainMenu">
           <li><a href="">Услуги</a>
             <ul class="subMenu">
-              <li><a href="#">Роды в Денвере</a></li>
+              <li><a href="visaAplication.html">Роды в Денвере</a></li>
               <li><a href="#">Оформление визы в США</a></li>
               <li><a href="#">Оформление документов</a></li>
               <li><a href="#">Аренда жилья в Колорадо</a></li>
-              <li><a href="#">Аренда автомобиля</a></li>
+              <li><a href="rentCar.html">Аренда автомобиля</a></li>
             </ul>
           </li>
           <li><a href="">Медицина</a>
@@ -39,19 +50,12 @@
               <li><a href="#">Примерный бюджет поездки</a></li>
             </ul>
           </li>
-          <li><a href="">FAQ</a>
+          <li><a href="FAQ.html">FAQ</a>
           </li>
-          <li><a href="">Контакты</a>
+          <li><a href="#">Контакты</a>
           </li>
         </ul>
-
-        <a href="index.html"><img src="img/logo.png" alt="one2dream"/></a>
-
-        <div class="number">
-          <span><i class="fa fa-phone" aria-hidden="true"></i> 8 800 1234 567</span>
-          <a class="call">заказать звонок</a>
-          <span>Eng</span>
-        </div>
+        <div class="clearAll"></div>
         <div class="pop_up">
           <div id="overlay"></div>
           <div id="modal_form_recall1" class="animated slideInDown">
@@ -220,7 +224,7 @@
 
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
             gravida dolor sit amet lacus accumsan et viverra.</p>
-          <a href="#">подробнее</a>
+          <a href="News.html">подробнее</a>
         </div>
       </div>
       <div class="blogText"><img src="img/b1.jpg" alt="картинка"/>
@@ -230,7 +234,7 @@
 
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
             gravida dolor sit amet lacus accumsan et viverra.</p>
-          <a href="#">подробнее</a>
+          <a href="News.html">подробнее</a>
 
         </div>
       </div>
@@ -241,7 +245,7 @@
 
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
             gravida dolor sit amet lacus accumsan et viverra.</p>
-          <a href="#">подробнее</a>
+          <a href="News.html">подробнее</a>
 
         </div>
       </div>
